2006-07-12  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile.am:
	* configure.ac:
	* docs/.cvsignore:
	* docs/Makefile.am:
	* docs/common.xsl:
	* docs/devhelp.xsl:
	* docs/html.xsl:
	* docs/pdf-style.xsl:
	* docs/pdf.xsl:
	* docs/ref-html-style.xsl:
	* docs/reference/.cvsignore:
	* docs/reference/pygobject-classes.xml:
	* docs/reference/pygobject-constants.xml:
	* docs/reference/pygobject-functions.xml:
	* docs/reference/pygobject-gboxed.xml:
	* docs/reference/pygobject-ginterface.xml:
	* docs/reference/pygobject-gpointer.xml:
	* docs/reference/pygobject-maincontext.xml:
	* docs/reference/pygobject-mainloop.xml:
	* docs/reference/pygobject-ref.xml:
	* docs/reference/pygobject.xml:
	Import GObject part of John Finlay's PyGTK Reference Manual, copy
	over infrastructure from the pygtk-web module.

2006-07-12  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* configure.ac: Post-release version bump to 2.11.1.

=== PyGObject 2.11.0 ===
2006-07-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gobject/gobjectmodule.c (pyg_type_register): Make interface_data
	point to the python type before adding the interface to the new
	type.  This should fix interface implementation (actually I
	thought such code had already been added earlier but can't find it
	now and it is obviously needed...)
	(pyg_type_register): move the code that needs g_type_class_ref
	until after interface registration (more code that I already wrote
	in the past but got lost).

2006-07-05  John Finlay  <finlay@moeraki.com>

	* gobject/pygiochannel.c (py_io_channel_init): Fix message typo.

2006-06-28  Cedric Gustin  <cedric.gustin@gmail.com>

	* dsextras.py (InstallData): Set datarootdir in .pc file.

	* pygobject_postinstall.py (replace_prefix): Do not parse
	pygtk-codegen-2.0 as it is part of pygtk.

	* setup.py: Create gobject extension as gobject._gobject. Add
	pygoptioncontext.c and pygoptiongroup.c to the list of source
	files. Add option.py to the module files. Changed name of